hphp/test/zend/good/ext/standard/tests/network/long2ip_variation1.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if(substr(PHP_OS, 0, 3) == "WIN")
  die("skip don't run on Windows");
}
