hphp/test/zend/bad/ext/standard/tests/network/long2ip_variation1.php.skipif
<?php
if(substr(PHP_OS, 0, 3) == "WIN")
  die("skip don't run on Windows");
?> 